objects/ASI_CRM_StockOnHand__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Stock On Hands</relationshipLabel>
        <relationshipName>ASI_CRM_Customer_StockOnHand</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_EndingStock__c</fullName>
        <label>Ending Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PGLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PG Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_StockOnHand_PGLeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promoter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promoter</label>
        <referenceTo>ASI_CRM_Promoter__c</referenceTo>
        <relationshipName>ASI_CRM_StoreOnHands_Promoter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_StagingDateTime__c</fullName>
        <label>Staging DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SubBrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Stock On Hands</relationshipLabel>
        <relationshipName>ASI_CRM_StoreOnHand_SubBrand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SubmitDateTime__c</fullName>
        <label>Submit DateTime</label>
        <type>DateTime</type>
    </fields>
    <label>Stock On Hand</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_VN_Stock_On_Hands</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_SubBrand__c</columns>
        <columns>ASI_CRM_EndingStock__c</columns>
        <columns>ASI_CRM_DateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_StockOnHand__c.ASI_CRM_VN_StockOnHand</value>
        </filters>
        <label>All VN Stock On Hands</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SOH-{YY}{000000}</displayFormat>
        <label>Stock On Hand No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock On Hands</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_StockOnHand</fullName>
        <active>true</active>
        <label>VN Stock On Hand</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>